<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FirstDemo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
	<string name="welcome_register">Welcome Register</string>
    <string name="username">User name</string>
    <string name="password">Password</string>
    <string name="phone_num">Phone</string>
    <string name="age">Age</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
     <string name ="hint_username">Please input your user name!</string>
    <string name ="hint_password">Please input your password!</string>
    <string name ="hint_phone">Please input your phone number!</string>
    <string name ="hint_age">Please input your age!</string>
    
    <string name="time">Time</string>
    <string name="place">Place</string>
    <string name="order">Order</string>
</resources>
