<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/welcome_register"
        android:textSize="30dp"
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1" >

        <TableRow >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/username"/>"

            <EditText
                android:id="@+id/usernameRegister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_username"/>"
        </TableRow>

        <TableRow >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/password"/>"

            <EditText
                android:id="@+id/passwordRegister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"/>
        </TableRow>

        <TableRow >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/age"/>

            <EditText
                android:id="@+id/ageRegister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_age"/>
        </TableRow>

        <TableRow >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sex"
                android:textSize="20dp" />

            <RadioGroup
                android:id="@+id/sexRegister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/woman"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/nan"
                    android:text="@string/male"/>

                <RadioButton
                    android:id="@id/woman"
                    android:text="@string/female"/>
            </RadioGroup>
        </TableRow>

        <TableRow >

            <TextView />

            <LinearLayout >
                <Button
                    android:id="@+id/Register"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="注册" />
            </LinearLayout>
        </TableRow>
    </TableLayout>
</LinearLayout>